@startuml
title タイムライン編集データモデル案

skinparam classAttributeIconSize 0
hide circle

class Project {
  +String id
  +String name
  +String filePath
  +ProjectSettings settings
  +ProjectAssetLibrary assetLibrary
  +Timeline timeline
  +DateTime createdAt
  +DateTime updatedAt
}

class ProjectSettings {
  +int width
  +int height
  +int fps
  +int sampleRate
  +String backgroundColor
}

class ProjectAssetLibrary {
  +List<ProjectAsset> assets
}

class ProjectAsset {
  +String id
  +String name
  +String uri
  +ProjectAssetKind kind
  +int? width
  +int? height
  +int? durationFrames
  +int? fps
  +int? sampleRate
  +int? channels
}

class PsdAsset {
  +List<PsdPart> parts
}

class PsdPart {
  +String id
  +String name
  +bool visible
}

enum ProjectAssetKind {
  video
  image
  audio
}

class Timeline {
  +int durationFrames
  +List<TimelineTrack> tracks
}

class TimelineTrack {
  +String id
  +String name
  +TrackType type
  +bool muted
  +bool locked
  +List<TimelineClip> clips
}

enum TrackType {
  video
  text
  voice
  se
  stand
}

abstract class TimelineClip {
  +String id
  +String name
  +int startFrame
  +int durationFrames
  +ClipTransform transform
  +List<ClipEffect> effects
}

class MediaClip {
  +String assetId
  +int sourceStartFrame
  +int sourceDurationFrames
}

class TextClip {
  +String text
  +String fontFamily
  +double fontSize
  +String textColor
}

class VoiceClip {
  +String assetId
  +String lineId
}

class StandClip {
  +String assetId
  +Map<String, bool> partVisibility
  +String expressionName
}

class ClipTransform {
  +double x
  +double y
  +double scale
  +double rotation
  +double opacity
}

abstract class ClipEffect {
  +String id
  +EffectType type
}

class FadeEffect {
  +int startOffsetFrames
  +int durationFrames
  +FadeDirection direction
}

enum EffectType {
  fade
  keyframe
}

enum FadeDirection {
  in
  out
}

class VoiceLine {
  +String id
  +String text
  +String speakerId
  +VoiceParameters parameters
  +String generatedAssetId
}

class VoiceParameters {
  +double speed
  +double pitch
  +double intonation
  +double volume
}

Project *-- ProjectSettings
Project *-- ProjectAssetLibrary
Project *-- Timeline

ProjectAssetLibrary *-- ProjectAsset
ProjectAsset <|-- PsdAsset
PsdAsset *-- PsdPart

Timeline *-- TimelineTrack
TimelineTrack *-- TimelineClip
TimelineClip <|-- MediaClip
TimelineClip <|-- TextClip
TimelineClip <|-- VoiceClip
TimelineClip <|-- StandClip
TimelineClip *-- ClipTransform
TimelineClip *-- ClipEffect
ClipEffect <|-- FadeEffect

MediaClip --> ProjectAsset : assetId
VoiceClip --> ProjectAsset : assetId
VoiceClip --> VoiceLine : lineId
StandClip --> PsdAsset : assetId

VoiceLine *-- VoiceParameters
VoiceLine --> ProjectAsset : generatedAssetId

@enduml
